--- a/src/scss/_layoutUpcoming.scss
+++ b/src/scss/_layoutUpcoming.scss
@@ -12,28 +12,25 @@ $extraTextBlurbSpaceBottom: 3%;
 		background-color: #7ba7ba;
 		margin-top: 0;
 		margin-bottom: $spacing + $extraTextBlurbSpaceBottom;
-		padding: 0 $textBlurbPadding + $extraSpace;
-		width: $textBlurbWidth - $extraSpace * 2;
+		padding: 0 $textBlurbPadding;
+		width: $textBlurbWidth;
 	}
 
 	.textOverlay,
 	.completionDate {
+		display: flex;
+		flex-flow: row wrap;
 		position: relative;
 		padding: 1%;
 		z-index: 200;
-		// text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
 	}
+
 	.textOverlay {
-		// margin-top: -50px;
 		margin-top: 15px;
-		// margin-left: -20px;
 	}
+
 	.completionDate {
-		// margin-top: -65px;
-		margin-top: -55px;
-		// margin-right: 20px;
 		display: block;
 		text-align: right;
-		// font-size: 0.9em;
 	}
 }
